boinc (7.2.11+dfsg-1exp4) UNRELEASED; urgency=low

  * Addressed executable-not-elf-or-script lintian warning
    - usr/lib/boinc-server-maker/tools/project.xml
    - usr/share/doc/boinc-server-maker/examples/wrapper/build_android.sh

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Sat, 24 Aug 2013 01:20:07 +0200

boinc (7.2.11+dfsg-1exp3) experimental; urgency=low

  * Tweaked again hurd patches, now the missing
    MAXPATHLEN should have been addressed

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Thu, 22 Aug 2013 23:14:34 +0200

boinc (7.2.11+dfsg-1exp2) experimental; urgency=low

  * Trying to fix hurd ftbfs

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Thu, 22 Aug 2013 14:19:03 +0200

boinc (7.2.11+dfsg-1exp1) experimental; urgency=low

  * Added boinc-server-maker package

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Wed, 21 Aug 2013 16:51:49 +0200

boinc (7.2.11+dfsg-1) unstable; urgency=low

  * New upstream release
    - Localizations updated
  * Fixed some lintian warnings

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Wed, 21 Aug 2013 16:36:51 +0200

boinc (7.2.10+dfsg-1exp1) experimental; urgency=low

  * New upstream release, enabled server building.

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Mon, 12 Aug 2013 00:43:09 +0200

boinc (7.2.10+dfsg-1) unstable; urgency=low

  * New upstream release, patch refresh.

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Mon, 12 Aug 2013 00:39:28 +0200

boinc (7.2.7+dfsg-2) UNRELEASED; urgency=low

  * boinc-nvidia-cuda depends on libcuda1 | nvidia-current | libcuda-5.0-1
    (LP: #1129409).

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Fri, 09 Aug 2013 09:33:44 +0200

boinc (7.2.7+dfsg-1) unstable; urgency=low

  * New upstream release, patch refresh.
  * Linking libboinc_crypt.so against $(SSL_LIBS).

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Thu, 25 Jul 2013 10:56:43 +0200
